# fuzzing

./: .gitignore  .gitmodules  README.md  TODO.md  seeds.sh
parser-fuzzers/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
parser-fuzzers/bugs/: README.md
parser-fuzzers/configs/: README.md  afl.yaml  parser_targets.yaml  parser_targets_afl_pwg_feedback.yaml  parser_targets_afl_pwg_pdf_deep.yaml  parser_targets_auto_hybrid.yaml  parser_targets_cold_semantic.yaml  parser_targets_coverage.yaml  parser_targets_explore.yaml  parser_targets_feedback.yaml  parser_targets_general.yaml  parser_targets_image_feedback.yaml  parser_targets_image_imagetopdf_feedback.yaml  parser_targets_image_imagetops_feedback.yaml  parser_targets_image_imagetoraster_feedback.yaml  parser_targets_structural.yaml  parser_targets_underexplored.yaml  parser_targets_underexplored_feedback30.yaml  parser_targets_underexplored_semantic.yaml  targets.yaml
parser-fuzzers/dictionaries/: image_headers.dict  mime.dict  ppd.dict  pwg_bundle.dict  pwg_raster.dict
parser-fuzzers/docs/: afl-plus-plus.md  architecture.md  branch-events.md  bug-suite.md  coverage-discovery.md  evaluation.md  expanded-parser-support.md  local-cups-filters.md  next-stage-evaluation.md  oss-fuzz-comparison.md
parser-fuzzers/harnesses/: README.md  afl_pwg_bundle_harness.c  afl_template_probe.c  branch_event_template.cc  dynamic_compare_trace.c
parser-fuzzers/parser_fuzzers/: __init__.py
parser-fuzzers/scripts/: README.md  afl_build_env.sh  afl_coverage_env.sh  afl_direct_filter_target.sh  check_env.sh  (+45 more)
(+345 files in other folders)
